--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -12,12 +12,19 @@ code {
     monospace;
 }
 
-.success {
-  color: green;
+.message {
   background: lightgrey;
   font-size: 20px;
   border-style: solid;
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
+}
+
+.error {
+  color: red;
+}
+
+.success {
+  color: green;
 }
